--- a/EncryptMessangerClient/EncryptMessangerClient.csproj
+++ b/EncryptMessangerClient/EncryptMessangerClient.csproj
@@ -84,19 +84,24 @@
     <Compile Include="Events\ClientRegistrationEventArgs.cs" />
     <Compile Include="Events\ClientStatusExitEventArgs.cs" />
     <Compile Include="Events\ClientStatusOnlineEventArgs.cs" />
+    <Compile Include="Events\DialogSessionSuccessEventArgs.cs" />
     <Compile Include="Events\DialogsReceivedEventArgs.cs" />
     <Compile Include="Events\DialogsRequestEventArgs.cs" />
     <Compile Include="Events\DialogUserInfoReceivedEventArgs.cs" />
     <Compile Include="Events\EncryptionSettingsEventArgs.cs" />
     <Compile Include="Events\ExportKeysEventArgs.cs" />
     <Compile Include="Events\LoadDialogMessagesEventArgs.cs" />
+    <Compile Include="Events\LoadDialogSessionEventArgs.cs" />
+    <Compile Include="Events\LoadDialogSessionFaildEventArgs.cs" />
     <Compile Include="Events\LoadDialogUserInfoEventArgs.cs" />
     <Compile Include="Events\MessageSendEventArgs.cs" />
+    <Compile Include="Events\MessagesReceivedEventArgs.cs" />
     <Compile Include="Events\NewMessageEventArgs.cs" />
     <Compile Include="Events\RegistrationErrorEventArgs.cs" />
     <Compile Include="Events\RegistrationSuccessEventArgs.cs" />
     <Compile Include="Events\UpdateDialogEncryptionKeysEventArgs.cs" />
     <Compile Include="extensions\DialogsObservableCollectionExtension.cs" />
+    <Compile Include="extensions\MessagesSendibleInfoListExtension.cs" />
     <Compile Include="MessageBoxService\IMsgBoxService  .cs" />
     <Compile Include="MessageBoxService\MsgBoxService.cs" />
     <Compile Include="Model\Dialog.cs" />
