Исправлены ошибки ЭЦП приповторном использовании ключей. Измнен формат хранения ключей.

--- a/EncryptMessanger.dll/EncryptMessanger.dll.csproj
+++ b/EncryptMessanger.dll/EncryptMessanger.dll.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Encription\EncriptionParams.cs" />
     <Compile Include="Encription\EncryptionProvider.cs" />
     <Compile Include="Encription\SessionIO.cs" />
+    <Compile Include="Encription\UserVerificationData.cs" />
     <Compile Include="MessageAtribute.cs" />
     <Compile Include="MessageReader.cs" />
     <Compile Include="Messages\AKeyMessage.cs" />
