--- a/EncryptMessangerClient/EncryptMessangerClient.csproj
+++ b/EncryptMessangerClient/EncryptMessangerClient.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Events\ClientRegistrationEventArgs.cs" />
     <Compile Include="Events\ClientStatusExitEventArgs.cs" />
     <Compile Include="Events\ClientStatusOnlineEventArgs.cs" />
+    <Compile Include="Events\DeleteProgressEventArgs.cs" />
     <Compile Include="Events\DialogSessionSuccessEventArgs.cs" />
     <Compile Include="Events\DialogsReceivedEventArgs.cs" />
     <Compile Include="Events\DialogsRequestEventArgs.cs" />
@@ -105,6 +106,7 @@
     <Compile Include="Events\UpdateDialogEncryptionKeysEventArgs.cs" />
     <Compile Include="extensions\DialogsObservableCollectionExtension.cs" />
     <Compile Include="extensions\MessagesSendibleInfoListExtension.cs" />
+    <Compile Include="Progress\FileSendProgress.cs" />
     <Compile Include="MessageBoxService\IMsgBoxService  .cs" />
     <Compile Include="MessageBoxService\MsgBoxService.cs" />
     <Compile Include="Model\Attachment.cs" />
